--- a/views/act_form.html
+++ b/views/act_form.html
@@ -324,7 +324,7 @@
     </div>
   </div>
     <div class="act_form_beijingtu">
-      <a target="_blank" href="http://www.jjl.cn/zt/zhaopin/employment.html"><div class="act_form_diye"></div></a>
+      <a target="_blank" href="https://www.jjl.cn/zt/zhaopin/employment.html"><div class="act_form_diye"></div></a>
     </div>
 {% import "widget/new_slide/new_slide.html" as  slide %}
 {{slide.leyu_slide("XC_FEEDBACK_SEAT10",helper) }}
@@ -489,6 +489,6 @@
         s.parentNode.insertBefore(hm, s);
       })();
     </script>
-    <script src="http://jesong.jjl.cn/skin.jsp?comp=1&config=181" type="text/javascript"></script>
+    <script src="https://jesong.jjl.cn/skin.jsp?comp=1&config=181" type="text/javascript"></script>
 </body>
 </html>
