--- a/views/index.html
+++ b/views/index.html
@@ -90,7 +90,7 @@
     <div class="xuanze-haiwai-bikuang"></div>
     <div class="xuanze-haiwai">
       <h2><i class="iconfont icon-top" style="margin: 26px 6px 0px 14px;color: #C13232;">&#xe6bd;</i>海外分公司：
-        <a href="http://www.jjl.cn/zt/overseas/2018_Melbourne/index.html">墨尔本</a><a href="http://www.jjl.cn/zt/overseas/2018_auckland/index.html">奥克兰</a><a href="http://www.jjl.cn/zt/overseas/2018_toronto/index.html">多伦多</a><a href="http://www.jjl.cn/specialrank/zt/overseas/vancouver/index.html">温哥华</a></h2>
+        <a href="https://www.jjl.cn/zt/overseas/2018_Melbourne/index.html">墨尔本</a><a href="https://www.jjl.cn/zt/overseas/2018_auckland/index.html">奥克兰</a><a href="https://www.jjl.cn/zt/overseas/2018_toronto/index.html">多伦多</a><a href="https://www.jjl.cn/specialrank/zt/overseas/vancouver/index.html">温哥华</a></h2>
     </div>
   </div>
 
@@ -372,16 +372,16 @@
         {% endif %}
         {% endfor %}
         <div class="branch_company_text_tilte" data-id="{{cityList[51].companyId}}">
-          <a  href="http://www.jjl.cn/zt/overseas/2018_Melbourne/index.html" data-id="{{cityList[51].companyId}}" >{{cityList[51].companyName}}</a>
+          <a  href="https://www.jjl.cn/zt/overseas/2018_Melbourne/index.html" data-id="{{cityList[51].companyId}}" >{{cityList[51].companyName}}</a>
         </div>
         <div class="branch_company_text_tilte" data-id="{{cityList[50].companyId}}">
-          <a  href="http://www.jjl.cn/zt/overseas/2018_auckland/index.html" data-id="{{cityList[50].companyId}}" >{{cityList[50].companyName}}</a>
+          <a  href="https://www.jjl.cn/zt/overseas/2018_auckland/index.html" data-id="{{cityList[50].companyId}}" >{{cityList[50].companyName}}</a>
         </div>
         <div class="branch_company_text_tilte" data-id="{{cityList[49].companyId}}">
-          <a  href="http://www.jjl.cn/zt/overseas/2018_toronto/index.html" data-id="{{cityList[49].companyId}}" >{{cityList[49].companyName}}</a>
+          <a  href="https://www.jjl.cn/zt/overseas/2018_toronto/index.html" data-id="{{cityList[49].companyId}}" >{{cityList[49].companyName}}</a>
         </div>
         <div class="branch_company_text_tilte" data-id="{{cityList[48].companyId}}">
-          <a  href="http://www.jjl.cn/zt/overseas/vancouver/index.html" data-id="{{cityList[48].companyId}}" >{{cityList[48].companyName}}</a>
+          <a  href="https://www.jjl.cn/zt/overseas/vancouver/index.html" data-id="{{cityList[48].companyId}}" >{{cityList[48].companyName}}</a>
         </div>
     </div>
     </div>
