--- a/views/widget/nav_tenth/new_tenth.html
+++ b/views/widget/nav_tenth/new_tenth.html
@@ -67,7 +67,7 @@
                   <a href="{{ helper.urlgen(item.pageroute) }}" rel="nofollow" class="nav-tenth-on" style="color:#ffffff;">{{ item.navtext }}</a>
                   {% endif %}
                 {% endfor %}
-                <a  href="http://www.jjl.cn/zt/zhaopin/employment.html" rel="nofollow">诚聘英才</a>
+                <a  href="https://www.jjl.cn/zt/zhaopin/employment.html" rel="nofollow">诚聘英才</a>
           </div>
         
       </div>
