--- a/views/widget/top/top_liuxue.html
+++ b/views/widget/top/top_liuxue.html
@@ -347,11 +347,11 @@ input[type="checkbox"] {
         <span class="bor">|</span>
         <span><a href="javascript:void(0);" onclick="getlogin()" class="dui-text-warning-ss" rel="nofollow">登录</a></span>
         <span class="bor">|</span>
-        <span><a target="_blank" href="{{helper.urlgen('advisor_center', 'revmsg')}}">消息</a></span><!--http://www.51daxuetong.cn/advisor_center/revmsg-->
+        <span><a target="_blank" href="{{helper.urlgen('advisor_center', 'revmsg')}}">消息</a></span><!--https://www.51daxuetong.cn/advisor_center/revmsg-->
         <span class="bor">|</span>
-        <span><a target="_blank" href="http://www.jjl.cn/english/?tag=2" class="dui-text-warning-ss" rel="nofollow">English Website</a></span>
+        <span><a target="_blank" href="https://www.jjl.cn/english/?tag=2" class="dui-text-warning-ss" rel="nofollow">English Website</a></span>
         <span class="bor">|</span>
-        <span><a target="_blank" href="http://special.zhaopin.com/bj/2015/jjl032714/job.html" class="dui-text-warning-ss" rel="nofollow">诚聘英才</a></span>
+        <span><a target="_blank" href="https://special.zhaopin.com/bj/2015/jjl032714/job.html" class="dui-text-warning-ss" rel="nofollow">诚聘英才</a></span>
       </div>
   </div>
 </div>
@@ -376,9 +376,9 @@ input[type="checkbox"] {
         <li><i class="msg-icon iconfont nav-name">&#xe675;</i><span><a target="_blank" href="{{helper.urlgen('canzan_center')}}" rel="nofollow">{{login_nickname.nickname}}</a></span></li>
         {% endif %}
         <li><a target="_blank" href="javascript:void(0)" onclick="var h = window.location.href;console.log('h',h);window.location.href='/login_out?h='+h" rel="nofollow">退出</a></li>
-        <li><a target="_blank" href="{{helper.urlgen('advisor_center', 'revmsg')}}" rel="nofollow">消息</a></li><!--http://www.51daxuetong.cn/advisor_center/revmsg-->
-        <li><a href="http://www.jjl.cn/english/?tag=2" target="_blank" rel="nofollow">English Website</a></li>
-        <li class="topss"><a href="http://special.zhaopin.com/bj/2015/jjl032714/job.html" target="_blank" rel="nofollow">诚聘英才</a></li>
+        <li><a target="_blank" href="{{helper.urlgen('advisor_center', 'revmsg')}}" rel="nofollow">消息</a></li><!--https://www.51daxuetong.cn/advisor_center/revmsg-->
+        <li><a href="https://www.jjl.cn/english/?tag=2" target="_blank" rel="nofollow">English Website</a></li>
+        <li class="topss"><a href="https://special.zhaopin.com/bj/2015/jjl032714/job.html" target="_blank" rel="nofollow">诚聘英才</a></li>
       </ul>
     </div>
   </div>
