--- a/views/yimin_index.html
+++ b/views/yimin_index.html
@@ -344,16 +344,16 @@
         {% endif %}
         {% endfor %}
         <div class="branch_company_text_tilte" data-id="{{cityList[51].companyId}}">
-          <a  href="http://www.jjl.cn/zt/overseas/2018_Melbourne/index.html" data-id="{{cityList[51].companyId}}" >{{cityList[51].companyName}}</a>
+          <a  href="https://www.jjl.cn/zt/overseas/2018_Melbourne/index.html" data-id="{{cityList[51].companyId}}" >{{cityList[51].companyName}}</a>
         </div>
         <div class="branch_company_text_tilte" data-id="{{cityList[50].companyId}}">
-          <a  href="http://www.jjl.cn/zt/overseas/2018_auckland/index.html" data-id="{{cityList[50].companyId}}" >{{cityList[50].companyName}}</a>
+          <a  href="https://www.jjl.cn/zt/overseas/2018_auckland/index.html" data-id="{{cityList[50].companyId}}" >{{cityList[50].companyName}}</a>
         </div>
         <div class="branch_company_text_tilte" data-id="{{cityList[49].companyId}}">
-          <a  href="http://www.jjl.cn/zt/overseas/2018_toronto/index.html" data-id="{{cityList[49].companyId}}" >{{cityList[49].companyName}}</a>
+          <a  href="https://www.jjl.cn/zt/overseas/2018_toronto/index.html" data-id="{{cityList[49].companyId}}" >{{cityList[49].companyName}}</a>
         </div>
         <div class="branch_company_text_tilte" data-id="{{cityList[48].companyId}}">
-          <a  href="http://www.jjl.cn/zt/overseas/vancouver/index.html" data-id="{{cityList[48].companyId}}" >{{cityList[48].companyName}}</a>
+          <a  href="https://www.jjl.cn/zt/overseas/vancouver/index.html" data-id="{{cityList[48].companyId}}" >{{cityList[48].companyName}}</a>
         </div>
       </div>
     </div>
