--- a/views/release_article.html
+++ b/views/release_article.html
@@ -310,7 +310,7 @@
         }else {//不支持
           $(".img-content").append("对不起,您还没有安装PDF阅读器软件呢,为了方便预览PDF文档,请选择安装！");
           alert("对不起,您还没有安装PDF阅读器软件呢,为了方便预览PDF文档,请选择安装！");
-          location = "http://ardownload.adobe.com/pub/adobe/reader/win/9.x/9.3/chs/AdbeRdr930_zh_CN.exe";
+          location = "https://ardownload.adobe.com/pub/adobe/reader/win/9.x/9.3/chs/AdbeRdr930_zh_CN.exe";
         }
       }else {
         pdfShow(pdfList[1].file_path);//调用显示的方法
