--- a/views/widget/baiduMap/baidumap.html
+++ b/views/widget/baiduMap/baidumap.html
@@ -4,8 +4,8 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>百度地图单点标注</title>
-		<script src="http://api.map.baidu.com/api?v=2.0&ak=A1LU7iHS0avqQwPLAxbhKn0UYSQCuRVH"></script>
-		<script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
+		<script src="https://api.map.baidu.com/api?v=2.0&ak=A1LU7iHS0avqQwPLAxbhKn0UYSQCuRVH"></script>
+		<script src="https://www.jq22.com/jquery/jquery-1.10.2.js"></script>
 		<script src="js/jquery.baiduMap.min.js"></script>
 		<style>
 			* {
