--- a/views/widget/new_slide/new_slide.html
+++ b/views/widget/new_slide/new_slide.html
@@ -43,5 +43,5 @@
     </ul>
   </div>
 </div>
-<script src="http://jesong.jjl.cn/js/jjl.js"></script>
+<script src="https://jesong.jjl.cn/js/jjl.js"></script>
 {% endmacro %}
