--- a/views/widget/new_slide/new_slide3.html
+++ b/views/widget/new_slide/new_slide3.html
@@ -74,7 +74,7 @@
     </ul>
   </div>
 </div>#}
-<script src="http://jesong.jjl.cn/js/jjl.js"></script>
+<script src="https://jesong.jjl.cn/js/jjl.js"></script>
 <script>
   function  openchat_new(jobnum){
     openJesongChatByCus(1,jobnum)
