--- a/views/widget/new_slide_yimin/new_slide2.html
+++ b/views/widget/new_slide_yimin/new_slide2.html
@@ -42,5 +42,5 @@
     </ul>
   </div>
 </div>#}
-<script src="http://jesong.jjl.cn/js/jjl.js"></script>
+<script src="https://jesong.jjl.cn/js/jjl.js"></script>
 {% endmacro %}
