--- a/views/widget/top/top_login.html
+++ b/views/widget/top/top_login.html
@@ -479,7 +479,7 @@ function getregisterUser () {
     console.log('hh[1]', hh[3]);
     var hhh = h.split("?");
     console.log('hhh', hhh[1])
-    if (hh[3] != 'register' && hh[3] != 'forget' && hh[3] != 'loginUser' && hh[3] != 'loginUser?h=http:' && hh[3] != 'register?h=http:') {
+    if (hh[3] != 'register' && hh[3] != 'forget' && hh[3] != 'loginUser' && hh[3] != 'loginUser?h=https:' && hh[3] != 'register?h=https:') {
       console.log('11111')
 //      window.location.href = '/login?h=' + h
       // window.open('/loginUser?h=' + h);
@@ -509,7 +509,7 @@ function getregisterUser () {
     console.log('hh[1]', hh[3]);
     var hhh = h.split("?");
     console.log('hhh', hhh[1])
-    if (hh[3] != 'register' && hh[3] != 'forget' && hh[3] != 'login' && hh[3] != 'loginUser' && hh[3] != 'loginUser?h=http:') {
+    if (hh[3] != 'register' && hh[3] != 'forget' && hh[3] != 'login' && hh[3] != 'loginUser' && hh[3] != 'loginUser?h=https:') {
       console.log('11111')
 //      window.location.href = '/login?h=' + h
       // window.open('/loginUser?h=' + h);
