案例底页点赞头像

--- a/views/article_detail.html
+++ b/views/article_detail.html
@@ -79,7 +79,7 @@
           </div>
           <!-- 摘要 -->
           <div class="summary-cont">
-            <div class="summary-text">去美国读新生或转学都给孩子打开一扇窗！敬请关注！去美国读新生或转学都给孩子打开一扇窗！敬请关注！去美国读新生或转学都给孩子打开一扇窗！敬请关注！去美国读新生或转学都给孩子打开一扇窗！敬请关注！</div>
+            <div class="summary-text">{{article.article_info.introduce}}</div>
             <div class="zixun-text clearfix">
                 <img src="{{helper.cdnhost}}/assets/img/diye_icon_arrow_right.png" alt="">
                 <img src="{{helper.cdnhost}}/assets/img/diye_icon_arrow_right.png" alt="" style='margin-left: 4px;'>
