下载百度分享代码

--- a/views/case_detail.html
+++ b/views/case_detail.html
@@ -256,7 +256,7 @@
       "share":{}
     };
       // console.log(_bd_share_config.common.bdUrl)
-    with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='https://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];
+    with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];
     $("#collection").on("click",function(){
       //文章收藏按钮
       var that =this;
