--- a/views/adviser_main.html
+++ b/views/adviser_main.html
@@ -164,7 +164,7 @@
       },
       "share": {}
     };
-    with (document)0[(getElementsByTagName('head')[0] || body).appendChild(createElement('script')).src = 'https://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion=' + ~(-new Date() / 36e5)];
+    with (document)0[(getElementsByTagName('head')[0] || body).appendChild(createElement('script')).src = '/static/api/js/share.js?v=89860593.js?cdnversion=' + ~(-new Date() / 36e5)];
     $('.banner-box-left .slider').xSlider({
       //轮播图配置
 //          autoplay : 500,
