--- a/views/about/culture.html
+++ b/views/about/culture.html
@@ -2,6 +2,21 @@
 <html lang="en">
 <head>
 {% include "header_new.html" %}
+<style>
+  .branch-lunbo-slider .slider-img-ul, .branch-lunbo-slider .slider-img-ul li{
+    width: 1920px;
+    min-width: 1180px;
+    height: 450px;
+    overflow: hidden;
+    display: table-cell;
+    vertical-align: middle;
+  }
+  .slider-img-ul li img {
+      width: 100%;
+      height: auto;
+      max-width: 100%;
+  }
+</style>
 </head>
 <body style="background: #f5f5f5;">
 {% include "widget/common_hide/common_hide.html"%}
@@ -14,11 +29,12 @@
   {% include "widget/nav_tenth/nav_tenth.html" %}
 </div>#}
 
-<div class="clearfix">
+{#<div class="clearfix">
   <div class="branch-lunbo-slider" style="width:100%;height: 450px;" >
     {% include "widget/xSlider/xSlider.html" %}
   </div>
-</div>
+</div>#}
+<div style="width: 100%;;min-width: 1180px;height: 450px;margin: 0 auto;background: url({{xSlider[0].imageurl}}) no-repeat center;background-size: cover;"></div>
 <div class="clearfix" style="position: relative;top: -50px;">
     {% include "widget/nav_tenth/new_tenth.html" %}
   </div>
@@ -60,6 +76,7 @@
       intervalTime: 5000,
       pagination: true
     });
+    show_guanggao()
   })
 </script>
 </body>
