--- a/views/widget/new_footer/new_footer.html
+++ b/views/widget/new_footer/new_footer.html
@@ -82,7 +82,7 @@
 <script src="{{helper.cdnhost}}/assets/js/sha1.js" type="text/javascript" charset="utf-8"></script>
 <script src="{{helper.cdnhost}}/dep/js/layer-1.min.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/top.js"></script>
-<script src="http://api.map.baidu.com/api?v=2.0&ak=oTtUZr04m9vPgBZ1XOFzjmDpb7GCOhQw"></script>
+<script src="https://api.map.baidu.com/api?v=2.0&ak=oTtUZr04m9vPgBZ1XOFzjmDpb7GCOhQw"></script>
 <script src="{{helper.cdnhost}}/assets/js/showMap.js"></script>
 <script>
   function adviserlogin () {
