--- a/views/article_detail.html
+++ b/views/article_detail.html
@@ -258,18 +258,7 @@
                 "bdStyle":"0",
                 "bdSize":"16",
                 "bdUrl":window.location.href,
-                "bdDesc":'',
-                onAfterClick: function (cmd) {
-                  var authorUId = $('.bdsharebuttonbox').attr('data-uid');
-                  var shareUId = login_ss ? login_ss.uid : '';
-                  var count_data = {
-                    'type': cmd,
-                    'shareUId': shareUId,
-                    'authorUId': authorUId,
-                    'articleId': article_id
-                  }
-                  // console.log('onAfterClick',count_data)
-                }
+                "bdDesc":''
             },
             "share":{}
         };
