修改关于金吉列banner

--- a/views/about/new_events.html
+++ b/views/about/new_events.html
@@ -24,11 +24,12 @@
 {#<div style="margin:20px 0">
   {% include "widget/nav_tenth/nav_tenth.html" %}
 </div>#}
-<div class="clearfix">
+{#<div class="clearfix">
   <div class="branch-lunbo-slider" style="width:100%;height: 450px;" >
     {% include "widget/xSlider/xSlider.html" %}
   </div>
-</div>
+</div>#}
+<div style="width: 100%;min-width: 1180px;height: 450px;margin: 0 auto;background: url({{xSlider[0].imageurl}}) no-repeat center;background-size: cover;"></div>
 <div class="clearfix" style="position: relative;top: -50px;">
   {% include "widget/nav_tenth/new_tenth.html" %}
 </div>
