--- a/views/about/new_about.html
+++ b/views/about/new_about.html
@@ -17,11 +17,12 @@
 {% import "widget/new_nav_first/common_nav.html" as common_nav %}
 {{ common_nav.common_nav(tdk,helper) }}
 
-<div class="clearfix">
+{#<div class="clearfix">
     <div class="branch-lunbo-slider" style="width:100%;height: 450px;" >
         {% include "widget/xSlider/xSlider.html" %}
     </div>
-</div>
+</div>#}
+<div style="width: 100%;min-width: 1180px;height: 450px;margin: 0 auto;background: url({{xSlider[0].imageurl}}) no-repeat center;background-size: cover;"></div>
 <div class="clearfix" style="position: relative;top: -50px;">
   {% include "widget/nav_tenth/new_tenth.html" %}
 </div>
