修改底部浮层

--- a/views/index.html
+++ b/views/index.html
@@ -520,7 +520,7 @@
   var login_nickname = JSON.parse(cookie('login_ss'));
       // console.log('login_nickname',login_nickname);
       var userinfo_num = $('.top').data('uinfo')
-      console.log('userinfo_num',userinfo_num);
+      // console.log('userinfo_num',userinfo_num);
       var user_type;
       if (login_nickname == null) {
         // var val = '<div class="dui-layout-lg top-con" style="position: relative;">'+
