修改底部浮层

--- a/views/widget2/active_popup/active_popup.html
+++ b/views/widget2/active_popup/active_popup.html
@@ -133,7 +133,7 @@
                 <div class="act-pop-triangle-white"></div>
             </div>
         </div>
-          <div class="act-code-btn">立即咨询</div>
+          <div class="act-code-btn">立即预约</div>
     </div>
     <!-- <div class="act-pop-gift" >获取优惠券</div> -->
     <!-- <a href="http://www.jjl.cn/zt/2018/20180528_xiazhan/beijing.shtml" class="act-pop-detail" >
