--- a/public/assets/css/article_detail.css
+++ b/public/assets/css/article_detail.css
@@ -225,7 +225,7 @@
 }
 .adviser-case-detail-offer table th {
   background-color: #f5f5f5;
-  text-align: center;
+  /* text-align: center; */
   color: #333;
 }
 .adviser-touxiang{
