在线评估添加字段

--- a/views/widget2/active_popup/active_popup.html
+++ b/views/widget2/active_popup/active_popup.html
@@ -270,7 +270,8 @@
                     country: country,
                     city: city,
                     dataType: '12',
-                    source: h
+                    source: h,
+                    relation_id: 22
                 },
                 success:function(msg){
                     console.log(msg)
