--- a/views/about/schooltopic.html
+++ b/views/about/schooltopic.html
@@ -251,7 +251,37 @@
     <div class="form-content">
       <div><span>您的姓名：</span><input type="text"  id="username" name="username"/></div>
       <div><span>您的手机：</span><input type="tel" id="tel" name="tel"/></div>
-      <div><span>所在城市：</span><input type="text" id="city" name="city" /></div>
+      <div>
+        <span>意向国家：</span>
+        <select id="city" name="city" style="overflow-y:auto;padding: 0 20px 0 10px;">
+            <option value='1'>美国</option>
+            <option value='2'>英国</option>
+            <option value='3'>加拿大</option>
+            <option value='4'>澳大利亚</option>
+            <option value='5'>新西兰</option>
+            <option value='50'>韩国</option>
+            <option value='51'>日本</option>
+            <option value='101'>乌克兰</option>
+            <option value='100'>俄罗斯</option>
+            <option value='108'>爱尔兰</option>
+            <option value='111'>意大利</option>
+            <option value='112'>西班牙</option>
+            <option value='102'>白俄罗斯</option>
+            <option value='52'>新加坡</option>
+            <option value='53'>马来西亚</option>
+            <option value='54'>中国香港</option>
+            <option value='55'>中国澳门</option>
+            <option value='110'>丹麦</option>
+            <option value='103'>德国</option>
+            <option value='104'>法国</option>
+            <option value='105'>挪威</option>
+            <option value='106'>瑞典</option>
+            <option value='107'>芬兰</option>
+            <option value='109'>荷兰</option>
+            <option value='113'>瑞士</option>
+            <option value='114'>奥地利</option>
+        </select>
+      </div>
       <div class="submitId" id="submitId" style="cursor: pointer">在线预约</div>
       <div style="display: none;">
         <input type="hidden" name="activityTitle" id="activityTitle" value="马凯特大学" />
