修改底部悬浮

--- a/views/widget2/active_popup/active_popup.css
+++ b/views/widget2/active_popup/active_popup.css
@@ -4,7 +4,7 @@
       position: fixed;
       bottom: 0;
       z-index: 998;
-      background: url(../../assets/img/add-footer.png);
+      background: url(../../assets/img/add-footer1.png);
       background-position: center center;
       min-width: 1200px;
       /* opacity: 0; */
