--- a/views/release_article.html
+++ b/views/release_article.html
@@ -237,10 +237,10 @@
             </p>
             <div class="editor-btn-box" >
               <a  href="javascript:void(0);" class="dui-btn btn-xlarge btn-appointment" style="margin-right: 7px;" id="save-draft">
-                    保存到草稿
+                保存到草稿
               </a>
               <a  href="javascript:void(0);" class="dui-btn btn-xlarge btn-appointment" id="sureBtn">
-                   	立即发布
+                立即发布
               </a>
             </div>
           </div>  
@@ -255,12 +255,10 @@
   <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
   <script  src="{{helper.cdnhost}}/assets/js/wangEditor.min.js"></script>
-  <!-- <script src="//unpkg.com/wangeditor/release/wangEditor.min.js"></script> -->
   <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/xSlider-4.15.js" ></script>
   <script src="{{helper.cdnhost}}/dep/js/jquery.media.js"></script>
-
   <script src="{{helper.cdnhost}}/dep/js/html2markdown/html2markdown.js"></script>
   <script src="{{helper.cdnhost}}/dep/js/html2markdown/markdown_dom_parser.js"></script>
   <script src="{{helper.cdnhost}}/dep/js/html2markdown/showdown.js"></script>
@@ -279,7 +277,6 @@
     }
     $(function(){
       var pdfList = JSON.parse($('.assistant-cont').attr('data-pdf'))|| [];
-      console.log('pdf',pdfList)
       if (window.ActiveXObject || "ActiveXObject" in window) {
         //判断是否为IE浏览器，"ActiveXObject" in window判断是否为IE11 // 下面代码都是处理IE浏览器的情况 
         //判断是否安装了adobe Reader
@@ -352,21 +349,21 @@
       }) 
       var login_ss = null; //获取用户信息
       if(cookie('login_ss') != undefined){
-          login_ss = JSON.parse(cookie('login_ss'));
+        login_ss = JSON.parse(cookie('login_ss'));
       }
       $('.banner-box-left .slider').xSlider({
-          current: 0,
-          speed: 500,
-          intervalTime: 5000,
-          pagination: true,
-          dotPostion:'right'
+        current: 0,
+        speed: 500,
+        intervalTime: 5000,
+        pagination: true,
+        dotPostion:'right'
       });
       $('.banner-box-right .slider').xSlider({
-          current: 0,
-          speed: 1000,
-          intervalTime: 5000,
-          slidesPerView : 2,
-          slidesPerGroup : 2,
+        current: 0,
+        speed: 1000,
+        intervalTime: 5000,
+        slidesPerView : 2,
+        slidesPerGroup : 2,
         pagination: true
       });
       var city_id =null;
@@ -392,6 +389,8 @@
           this.value  = this.value.substring(0, 200);
         }
       }); 
+      //国家筛选学历、标签表
+      var tag_list = 
       //选择文章类型
       var newsletterType = null;
       var newTagStr = '';
@@ -450,7 +449,6 @@
       //编辑器
       var E = window.wangEditor;
       var editor = new E('#editor','#editor1');
-      // 或者 var editor = new E( document.getElementById('#editor') )
       // 自定义菜单配置
       editor.customConfig.menus = [ 
         'head',  
@@ -474,12 +472,11 @@
       editor.customConfig.pasteIgnoreImg = true;
       // 自定义处理粘贴的文本内容
       editor.customConfig.pasteTextHandle = function (content) {
-          // content 即粘贴过来的内容（html 或 纯文本），可进行自定义处理然后返回
-          var converter = new showdown.Converter();
-          converter.setOption('tables', true);
-          return converter.makeHtml(html2markdown(content));
+        // content 即粘贴过来的内容（html 或 纯文本），可进行自定义处理然后返回
+        var converter = new showdown.Converter();
+        converter.setOption('tables', true);
+        return converter.makeHtml(html2markdown(content));
       }
-
       editor.customConfig.uploadFileName = 'upload';
       // 将图片大小限制为 500K
       editor.customConfig.uploadImgMaxSize = 2*1024 * 1024;
