修改在线评估字段

--- a/views/widget2/active_popup/active_popup.html
+++ b/views/widget2/active_popup/active_popup.html
@@ -271,7 +271,7 @@
                     city: city,
                     dataType: '12',
                     source: h,
-                    relation_id: 22
+                    relationId: 22
                 },
                 success:function(msg){
                     console.log(msg)
