--- a/views/release_article.html
+++ b/views/release_article.html
@@ -390,7 +390,35 @@
         }
       }); 
       //国家筛选学历、标签表
-      var tag_list = 
+      var tag_list = {
+        "0": {}
+        {"countryId":"1","txt":"美国"},
+        {"countryId":"2","txt":"英国"},
+        {"countryId":"3","txt":"加拿大"},
+        {"countryId":"4","txt":"澳大利亚"},
+        {"countryId":"5","txt":"新西兰"},
+        {"countryId":"51","txt":"日本"},
+        {"countryId":"50","txt":"韩国"},
+        {"countryId":"54","txt":"中国香港"},
+        {"countryId":"55","txt":"中国澳门"},
+        {"countryId":"100","txt":"俄罗斯"},
+        {"countryId":"101","txt":"乌克兰"},
+        {"countryId":"108","txt":"爱尔兰"},
+        {"countryId":"111","txt":"意大利"},
+        {"countryId":"112","txt":"西班牙"},
+        {"countryId":"102","txt":"白俄罗斯"},
+        {"countryId":"52","txt":"新加坡"},
+        {"countryId":"53","txt":"马来西亚"},
+        {"countryId":"110","txt":"丹麦"},
+        {"countryId":"103","txt":"德国"},
+        {"countryId":"104","txt":"法国"},
+        {"countryId":"105","txt":"挪威"},
+        {"countryId":"106","txt":"瑞典"},
+        {"countryId":"107","txt":"芬兰"},
+        {"countryId":"109","txt":"荷兰"},
+        {"countryId":"113","txt":"瑞士"},
+        {"countryId":"114","txt":"奥地利"}
+      }
       //选择文章类型
       var newsletterType = null;
       var newTagStr = '';
